# PIIcorpus

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
configs/: demo.toml  realistic-safe.toml
docs/: CLAIM_BOUNDARIES.md  DATA_SAFETY.md  FAILURE_MODEL.md  FORMAT.md  METHODOLOGY.md
examples/deliberately_bad/: README.md  build_examples.py  cases.toml
examples/demo/: README.md
examples/demo/corpus/: corpus-config.json  manifest.json
examples/demo/corpus/splits/: eval.jsonl  holdout.jsonl  train.jsonl
examples/realistic/: README.md
examples/realistic/corpus/: corpus-config.json  manifest.json
examples/realistic/corpus/splits/: eval.jsonl  holdout.jsonl  train.jsonl
src/piicorpus/: __init__.py  annotation.py  cli.py  config.py  failure_model.py  generator.py  identity.py  manifest.py  models.py  morphology.py  plugins_realistic.py  probe.py  profiles.py  safety.py  scoring.py  semantics.py  similarity.py  skeletons.py
src/piicorpus/exporters/: __init__.py  core.py
src/piicorpus/importers/: __init__.py  annotated.py  external.py
src/piicorpus/validators/: __init__.py  core.py
tests/: conftest.py  test_annotation.py  test_audit.py  test_cli.py  test_config.py  test_external.py  test_generation_validation.py  test_import_export.py  test_integrity_gates.py  test_plugins.py  test_probe.py  test_realistic.py  test_release_metadata.py  test_scoring.py  test_similarity.py
